--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Barber Shop App</title>
+    <title>BarberShop App</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700;900&display=swap"
       rel="stylesheet"
@@ -11,6 +11,20 @@
     <link rel="stylesheet" href="build/css/app.css" />
   </head>
   <body>
+    <div class="container-barbershop">
+      <div class="image"></div>
+      <div class="app">
+        <header class="header">
+          <h1>BarberShop App</h1>
+        </header>
+        <nav class="tabs">
+          <button type="button">Services</button>
+          <button type="button">Customer Information</button>
+          <button type="button">Summary</button>
+        </nav>
+      </div>
+    </div>
+
     <script src="build/js/bundle.min.js"></script>
   </body>
 </html>
