--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
           <button type="button">Customer Information</button>
           <button type="button">Summary</button>
         </nav>
+
+        <!-- App content -->
+        <div class="section">
+          <h2>Services</h2>
+          <p class="text-center">Choose your services below</p>
+          <div id="services" class="list-services"></div>
+        </div>
+        <div class="section">
+          <h2>Your Data and Date</h2>
+        </div>
+        <div class="section">
+          <h2>Summary</h2>
+        </div>
       </div>
     </div>
 
