--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         <div id="step-3" class="section">
           <h2>Summary</h2>
         </div>
+
+        <div class="paging">
+          <button id="back">&laquo; Back</button>
+          <button id="next">Next &raquo;</button>
+        </div>
       </div>
     </div>
 
