Style form and validation summary

--- a/index.html
+++ b/index.html
@@ -31,8 +31,24 @@
         </div>
         <div id="step-2" class="section">
           <h2>Your Data and Date</h2>
+          <p>Enter your data and date of your appointment</p>
+
+          <form class="form">
+            <div class="field">
+              <label for="name">Name</label>
+              <input type="text" id="name" placeholder="Your Name" />
+            </div>
+            <div class="field">
+              <label for="date">Date</label>
+              <input type="date" id="date" />
+            </div>
+            <div class="field">
+              <label for="time">Time</label>
+              <input type="time" id="time" />
+            </div>
+          </form>
         </div>
-        <div id="step-3" class="section">
+        <div id="step-3" class="section content-summary">
           <h2>Summary</h2>
         </div>
 
